--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "mister-bitcoin-angular",
   "version": "0.0.0",
+  "homepage":"https://DotanSharaby.github.io/misterbitcoin-angular",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "deploy":"gh-pages -d build"
   },
   "private": true,
   "dependencies": {
@@ -19,6 +21,10 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.4",
+    "angular-font-awesome": "^3.1.2",
+    "angular-google-charts": "^0.1.6",
+    "gh-pages": "^2.1.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
