--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "mister-bitcoin-angular",
+  "name": "misterbitcoin-angular",
   "version": "0.0.0",
   "homepage":"https://DotanSharaby.github.io/misterbitcoin-angular",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --base-href=/misterbitcoin-angular/",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "deploy":"gh-pages -d build"
+    "deploy":"gh-pages -d dist"
   },
   "private": true,
   "dependencies": {
